# aegis

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icon.mjs
src/: App.tsx  api.ts  clipboard.ts  csv.ts  favicon.ts  hibp.ts  strength.ts  styles.css  totp.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  guard.rs  lib.rs  main.rs  vault.rs
src/components/: AuditPanel.tsx  EntryModal.tsx  Generator.tsx  LockScreen.tsx  SettingsPage.tsx  icons.tsx
