[package]
name = "aegis"
version = "2.1.0"
description = "Aegis - надёжный кроссплатформенный менеджер паролей"
authors = ["nstudew"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aegis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Включается командой `tauri build` для продакшен-сборки: фронтенд берётся
# из встроенных ассетов (frontendDist), а не с dev-сервера. НЕ УДАЛЯТЬ!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
